Changing the DOM exceptions thrown from methods on data nodes, fixes bug #16605.